finish CRUD redux

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -48,6 +48,7 @@
         "position": "Position",
         "roleid": "Role",
         "image": "Image",
-        "submit": "Save Change"
+        "submit": "Create user",
+        "edit": "Save change"
     }
 }
