--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -50,5 +50,9 @@
         "image": "Hình ảnh",
         "submit": "Tạo mới",
         "edit": "Lưu thay đổi"
+    },
+    "homepage": {
+        "outstanding-doctor": "Bác sĩ nổi bật tuần qua",
+        "more-info": "Xem thêm"
     }
 }
