--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -57,5 +57,12 @@
     "homepage": {
         "outstanding-doctor": "Bác sĩ nổi bật tuần qua",
         "more-info": "Xem thêm"
+    },
+
+    "manage-schedule": {
+        "title": "Quản lí kế hoạch của bác sĩ",
+        "choose-doctor": "Chọn bác sĩ",
+        "choose-date": "Chọn ngày",
+        "save": "Lưu thông tin"
     }
 }
