--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -78,6 +78,20 @@
             "detail": "Xem chi tiết",
             "payment": " Người bệnh có thể thanh toán chi phí bằng hình thức: ",
             "hide-price": "Ẩn bảng giá"
+        },
+        "booking-modal": {
+            "title": "Thông Tin Đặt Lịch Khám Bệnh",
+            "fullName": "Họ và tên",
+            "phoneNumber": "Số điện thoại",
+            "email": "Email",
+            "address": "Địa chỉ liên lạc",
+            "reason": "Lý do khám",
+            "gender": "Giới tính",
+            "birthday": "Ngày sinh",
+            "btn": "Đặt lịch",
+            "cancel-btn": "Hủy",
+            "priceBooking": "Miễn phí đặt lịch",
+            "price": "Giá khám: "
         }
     },
     "admin": {
