--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -106,7 +106,9 @@
             "province": "Province",
             "nameClinic": "Clinic name",
             "addressClinic": "Clinic address",
-            "note": "Note"
+            "note": "Note",
+            "specialty": "Specialty",
+            "select-clinic": "Clinic"
         }
     }
 }
