--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -92,7 +92,8 @@
             "btn": "Đặt lịch",
             "cancel-btn": "Hủy",
             "priceBooking": "Miễn phí đặt lịch",
-            "price": "Giá khám: "
+            "price": "Giá khám: ",
+            "see-more": "Xem thêm"
         }
     },
     "admin": {
